<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignInFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivLoginImage"
            android:layout_width="@dimen/_320sdp"
            android:layout_height="@dimen/_300sdp"
            android:contentDescription="@string/todo1"
            android:scaleType="centerCrop"
            android:src="@drawable/image_prod"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/ivIconcon"
            android:layout_width="65.00dp"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center"
            android:layout_marginTop="13.00dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="13.00dp"
            android:text="@string/india_s_last_minute_app1"
            android:textColor="@color/black"
            android:textSize="22.10sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_or_sign_up"
            android:textColor="@color/black"
            android:textSize="16.90sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="28dp"
            android:layout_marginTop="19.50dp"
            app:boxCornerRadiusBottomStart="24dp"
            app:boxCornerRadiusBottomEnd="16.90dp"
            app:endIconMode="clear_text"
            app:boxCornerRadiusTopStart="16.90dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsernumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/baseline_local_phone_24"
                android:drawablePadding="9.10dp"
                android:hint="@string/enter_mobile_number"
                android:inputType="number"
                android:textColorHint="#8D6E63" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="58.50dp"
            android:layout_marginHorizontal="26dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#8d99ae"
            android:gravity="center"
            android:text="@string/Continue"
            android:textAllCaps="false"
            android:textColor="#263238"
            app:cornerRadius="12dp" />

    </LinearLayout>

 </ScrollView>


</LinearLayout>